# synthetic-citizen-jury-ai-moral-deliberation

./: .gitignore  README.md  hypotheses.json  papers.json  pyproject.toml
code/: README.md  run_simulation.py
code/agent_simulation/: __init__.py  __main__.py  cli.py  clients.py  engine.py  io.py  prompts.py  runtime.py  schema.py
configs/: README.md  citizen_jury_with_foreperson.json  citizen_jury_without_foreperson_adversarial.json  citizen_jury_without_foreperson_consensus.json  citizen_jury_without_foreperson_delphi.json  hackathon_one_hour.json
notes/sections/: concept.md  hypothesis.md  literature.md
results/: README.md  citizen-jury-with-foreperson-2026-06-12-2011125397780000.json  citizen-jury-with-foreperson-2026-06-12-2011125397780000.md  citizen-jury-without-foreperson-adversarial-2026-06-12-2021098125990000.json  citizen-jury-without-foreperson-adversarial-2026-06-12-2021098125990000.md  citizen-jury-without-foreperson-consensus-2026-06-12-2012333413010000.json  citizen-jury-without-foreperson-consensus-2026-06-12-2012333413010000.md  citizen-jury-without-foreperson-delphi-2026-06-12-2013439087810000.json  citizen-jury-without-foreperson-delphi-2026-06-12-2013439087810000.md
tests/: test_agent_simulation.py
