[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-simulation-lab"
version = "0.1.0"
description = "Config-driven multi-agent simulations with a preserved synthetic citizen jury preset."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = []

[project.scripts]
agent-sim = "agent_simulation.cli:main"

[tool.setuptools]
package-dir = {"" = "code"}

[tool.setuptools.packages.find]
where = ["code"]
